# simple-reshuffle-app

./: .clang-format  CMakeLists.txt  README.md  conan_provider.cmake  conanfile.txt  main.cpp  run-docker.sh
.github/workflows/: clang-format.yml  static-analysis.yml  tests.yaml
app/: CMakeLists.txt  main.cpp
cmake/: MacBrewLLVMToolchain.cmake
cmake/modules/: FindReshuffle.cmake  Findreshuffle.cmake
include/: foo.hpp
src/: foo.cpp
tests/: CMakeLists.txt  dummy_test.cpp  foo_test.cpp
